# UPS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.py  main.py  makefile  margame.py  marias.py  pyproject.toml  server.cpp
GUI/: button.py  card.py  client.py  game.py  gui.py  gui_game.py  inputbox.py  msg_handler.py  player.py
client/: dokumentace.tex
client/src/: GameManager.py  Gui.py
client/src/Client/: ClientManager.py  Protocol.py
client/src/Game/: Card.py  Game.py  Player.py
client/src/View/: GuiManager.py  Obstacles.py  (+2 more)
game/: Card.hpp  Deck.cpp  Game.cpp  Game.hpp  GameLogic.cpp  GameLogic.hpp  Hand.cpp  Hand.hpp  Player.cpp  Player.hpp
game_server/: Card.cpp  Card.hpp  Deck.cpp  Deck.hpp  Game.cpp  Game.hpp  GameLogic.cpp  GameLogic.hpp  Hand.cpp  Hand.hpp  Player.cpp  Player.hpp
server/: ClientManager.cpp  ClientManager.hpp  GameManager.cpp  GameManager.hpp  LobbyManager.cpp  LobbyManager.hpp  Main.cpp  MessageHandler.cpp  MessageHandler.hpp  NetworkManager.cpp  NetworkManager.hpp  Protocol.cpp  Protocol.hpp  Server.cpp  Server.hpp  main.cpp  test_server.cpp  test_server.hpp
server/game/: Card.hpp  Deck.cpp  Deck.hpp  Game.cpp  Game.hpp  GameLogic.cpp  GameLogic.hpp  Hand.cpp  Hand.hpp  Player.cpp  Player.hpp
src/: ClientManager.py  GameManager.py  Gui.py  app.py  cards.py  game.py  game_logic.py  gui.py  margame.py  player.py
src/View/: GuiManager.py  Obsticles.py
src/game/: card.py  game.py  player.py
src/gui/: GuiManager.py  obsticles.py
src_old/: oldmain.py
tests/: test_game.py  test_game_logic.py  test_player.py
